--- a/index.css
+++ b/index.css
@@ -1,58 +1,76 @@
 .carnedeboicard-wrapper {
   display: contents;
 }
-.carnedeboicard-carnedeboicard {
-  width: 346px;
-  height: 367px;
+
+.carnedeboicard-carnedeboicard,
+.carnedeboicard-carnedeboicard1,
+.carnedeboicard-carnedeboicard2 {
   display: flex;
-  position: relative;
-  flex-wrap: wrap;
-  align-self: flex-end;
-  align-items: stretch;
-  padding-right: var(--dl-space-space-unit);
-  flex-direction: column-reverse;
-  background-color: #ffffff;
-}
-.carnedeboicard-containerboi {
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  width: 100%;
-  height: 70%;
-  margin: auto;
-  display: flex;
-  position: absolute;
-  flex-wrap: wrap;
-  align-items: center;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 200px;
+  /* Define uma largura fixa para o card */
 }
-.carnedeboicard-image {
-  top: 0px;
+
+.carnedeboicard-containerboi {
+  margin-bottom: 0px;
+  /* Espaçamento entre a imagem e o texto*/
+}
+
+.carnedeboicard-image,
+.carnedeboicard-image1,
+.carnedeboicard-image2 {
+  width: 350px;
+  /* Largura fixa para todas as imagens */
+  height: 350px;
+  /* Altura fixa para todas as imagens */
+  object-fit: cover;
+  /* Garante que as imagens mantenham a proporção e preencham a área */
+  display: block;
+  /* Garante que a imagem ocupe o espaço do bloco */
+  margin: 0 auto;
+  /* Centraliza as imagens horizontalmente */
+  margin-bottom: 100px;
+  /*Espaço entre a imagem e o texto*/
+}
+
+.pagina-inicial-fragment1,
+.pagina-inicial-fragment2,
+.pagina-inicial-fragment3 {
+  text-align: center;
+  margin-top: 10px;
+  /* Espaçamento entre a imagem e o texto */
+}
+
+.pagina-inicial-text24 {
   left: 0px;
   right: 0px;
   width: 100%;
-  height: 100%;
+  bottom: 0px;
   margin: auto;
-  position: absolute;
-  align-self: center;
-  object-fit: cover;
-  border-color: var(--dl-color-theme-neutral-dark);
-  border-width: 1px;
-  border-radius: var(--dl-radius-radius-buttonradius);
-}
-.pagina-inicial-fragment1 {
-  display: contents;
-}
-.pagina-inicial-text24 {
   display: inline-block;
+  /* position: absolute; */
+  align-self: center;
+  text-align: left;
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-twounits);
+  padding-right: var(--dl-space-space-twounits);
+  padding-bottom: var(--dl-space-space-halfunit);
+  text-decoration: none;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
 }
+
 .carnedeboicardroot-class-name {
   left: 0px;
   bottom: -5px;
   margin: auto;
   position: absolute;
 }
+
 .carnedeboicardroot-class-name1 {
   left: 0px;
   right: 0px;
@@ -61,12 +79,14 @@
   position: absolute;
   align-self: flex-end;
 }
+
 .carnedeboicardroot-class-name2 {
   right: 0px;
   bottom: -5px;
   position: absolute;
   align-self: flex-end;
 }
+
 @media(max-width: 479px) {
   .carnedeboicardroot-class-name {
     top: 0px;
@@ -76,6 +96,7 @@
     position: absolute;
     align-self: center;
   }
+
   .carnedeboicardroot-class-name1 {
     top: 0px;
     left: 0px;
@@ -85,6 +106,7 @@
     position: absolute;
     align-self: center;
   }
+
   .carnedeboicardroot-class-name2 {
     left: 0px;
     right: 0px;
@@ -102,6 +124,7 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
 .pagina-inicial-header {
   flex: 0 0 auto;
   width: 100%;
@@ -115,6 +138,7 @@
   justify-content: space-between;
   background-color: var(--dl-color-theme-primary1);
 }
+
 .pagina-inicial-icone {
   flex: initial;
   width: auto;
@@ -127,6 +151,7 @@
   justify-content: center;
   background-color: var(--dl-color-theme-primary1);
 }
+
 .pagina-inicial-image1 {
   width: 139px;
   height: 168px;
@@ -136,6 +161,7 @@
   border-radius: var(--dl-radius-radius-round);
   padding-bottom: 8px;
 }
+
 .pagina-inicial-titulo {
   flex: initial;
   width: auto;
@@ -148,6 +174,7 @@
   justify-content: center;
   background-color: var(--dl-color-theme-primary1);
 }
+
 .pagina-inicial-text10 {
   color: #ffffff;
   width: 100%;
@@ -164,7 +191,10 @@
   letter-spacing: 3%;
   text-transform: none;
   text-decoration: none;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  /*acrescenta sombra*/
 }
+
 .pagina-inicial-botoes {
   flex: 0 0 auto;
   width: auto;
@@ -177,6 +207,7 @@
   justify-content: space-between;
   background-color: var(--dl-color-theme-primary1);
 }
+
 .pagina-inicial-button1 {
   fill: var(--dl-color-theme-neutral-dark);
   color: var(--dl-color-theme-neutral-dark);
@@ -190,10 +221,12 @@
   border-radius: 28px;
   background-color: var(--dl-color-theme-secondary1);
 }
+
 .pagina-inicial-text11 {
   color: #ffffff;
   width: 100%;
 }
+
 .pagina-inicial-button2 {
   fill: var(--dl-color-theme-neutral-dark);
   color: var(--dl-color-theme-neutral-dark);
@@ -207,10 +240,12 @@
   border-radius: 28px;
   background-color: var(--dl-color-theme-secondary1);
 }
+
 .pagina-inicial-text14 {
   color: #ffffff;
   width: 100%;
 }
+
 .pagina-inicial-ofertadodia {
   width: 100%;
   height: 251px;
@@ -226,6 +261,7 @@
   margin-bottom: var(--dl-space-space-twounits);
   justify-content: flex-end;
 }
+
 .pagina-inicial-containerfrango {
   top: 0px;
   flex: 0 0 auto;
@@ -241,6 +277,7 @@
   flex-direction: row;
   justify-content: center;
 }
+
 .pagina-inicial-image2 {
   width: 100%;
   height: 100%;
@@ -249,6 +286,7 @@
   border-width: 1px;
   border-radius: var(--dl-radius-radius-buttonradius);
 }
+
 .pagina-inicial-containeroferta {
   top: 0px;
   flex: 1;
@@ -265,16 +303,23 @@
   flex-direction: row;
   justify-content: flex-start;
 }
+
 .pagina-inicial-text17 {
   text-align: justify;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  /*acrescenta sombra*/
 }
+
 .pagina-inicial-text22 {
   text-align: justify;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  /*acrescenta sombra*/
 }
+
 .pagina-inicial-cardpio {
   width: 100%;
   height: 484px;
-  display: flex;
+  /* display: flex; */
   position: relative;
   flex-wrap: wrap;
   margin-top: var(--dl-space-space-twounits);
@@ -285,6 +330,7 @@
   padding-bottom: var(--dl-space-space-unit);
   justify-content: flex-end;
 }
+
 .pagina-inicial-titulocardapio {
   top: 16px;
   left: 0px;
@@ -292,40 +338,40 @@
   width: 100%;
   height: 80.5px;
   display: flex;
-  position: absolute;
+  /* position: absolute; */
   flex-wrap: wrap;
   align-self: flex-start;
   align-items: center;
   justify-content: center;
+  margin-bottom: 30px;
 }
+
 .pagina-inicial-text23 {
   align-self: flex-start;
   text-align: center;
   padding-top: var(--dl-space-space-halfunit);
   padding-bottom: var(--dl-space-space-halfunit);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  /*acrescenta sombra*/
 }
+
 .pagina-inicial-cards {
-  flex: 0 0 auto;
-  width: 100%;
-  height: 362px;
   display: flex;
-  position: relative;
-  flex-wrap: wrap;
-  align-self: flex-end;
-  margin-top: var(--dl-space-space-unit);
-  align-items: flex-end;
-  margin-bottom: var(--dl-space-space-unit);
-  justify-content: space-between;
+  /* Ativa o Flexbox */
+  flex-direction: row;
+  /* Garante que os elementos sejam dispostos em linha */
+  justify-content: center;
+  /* Distribui os cards com espaço entre eles */
+  gap: 50px;
+  /* Adiciona um espaçamento entre os cards */
+  flex-wrap: nowrap;
+  /* Evita que os cards quebrem para a próxima linha */
 }
+
 .pagina-inicial-fragment1 {
   display: contents;
 }
-.pagina-inicial-text24 {
-  display: inline-block;
-}
-.pagina-inicial-fragment2 {
-  display: contents;
-}
+
 .pagina-inicial-text29 {
   left: 0px;
   right: 0px;
@@ -333,7 +379,7 @@
   bottom: 0px;
   margin: auto;
   display: inline-block;
-  position: absolute;
+  /* position: absolute; */
   align-self: center;
   text-align: left;
   padding-top: var(--dl-space-space-halfunit);
@@ -341,10 +387,10 @@
   padding-right: var(--dl-space-space-twounits);
   padding-bottom: var(--dl-space-space-halfunit);
   text-decoration: none;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
-.pagina-inicial-fragment3 {
-  display: contents;
-}
+
+
 .pagina-inicial-text34 {
   left: 0px;
   right: 0px;
@@ -352,7 +398,7 @@
   bottom: 0px;
   margin: auto;
   display: inline-block;
-  position: absolute;
+  /*position: absolute;*/
   align-self: center;
   text-align: left;
   padding-top: var(--dl-space-space-halfunit);
@@ -360,15 +406,19 @@
   padding-right: var(--dl-space-space-twounits);
   padding-bottom: var(--dl-space-space-halfunit);
   text-decoration: none;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
 @media(max-width: 991px) {
   .pagina-inicial-icone {
     width: auto;
   }
+
   .pagina-inicial-image1 {
     width: auto;
     height: auto;
   }
+
   .pagina-inicial-titulo {
     width: 100%;
     height: 100%;
@@ -376,119 +426,122 @@
     flex-direction: row;
     justify-content: center;
   }
+
   .pagina-inicial-text10 {
     font-size: 45;
   }
+
   .pagina-inicial-botoes {
     width: auto;
   }
+
   .pagina-inicial-button1 {
     margin-top: var(--dl-space-space-unit);
     margin-left: var(--dl-space-space-unit);
     margin-right: var(--dl-space-space-unit);
     margin-bottom: var(--dl-space-space-unit);
   }
+
   .pagina-inicial-button2 {
     margin-top: var(--dl-space-space-unit);
     margin-left: var(--dl-space-space-unit);
     margin-right: var(--dl-space-space-unit);
     margin-bottom: var(--dl-space-space-unit);
   }
-  .pagina-inicial-cards {
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
+
+
+
+  @media(max-width: 767px) {
+    .pagina-inicial-titulo {
+      align-items: center;
+      justify-content: flex-start;
+    }
+
+    .pagina-inicial-botoes {
+      align-items: center;
+      flex-direction: column;
+      justify-content: space-between;
+    }
   }
-}
-@media(max-width: 767px) {
-  .pagina-inicial-titulo {
-    align-items: center;
-    justify-content: flex-start;
+
+  @media(max-width: 479px) {
+    .pagina-inicial-header {
+      width: 100%;
+      height: 233px;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .pagina-inicial-icone {
+      width: 224px;
+      height: 158px;
+      display: none;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .pagina-inicial-titulo {
+      top: 0px;
+      left: 1px;
+      height: auto;
+      position: absolute;
+    }
+
+    .pagina-inicial-text10 {
+      font-size: 40;
+      align-self: flex-start;
+      text-align: center;
+    }
+
+    .pagina-inicial-botoes {
+      left: 0px;
+      right: 0px;
+      width: 100%;
+      bottom: 0px;
+      height: 167px;
+      margin: auto;
+      position: absolute;
+      flex-wrap: wrap;
+      align-items: center;
+      padding-top: var(--dl-space-space-unit);
+      padding-left: var(--dl-space-space-halfunit);
+      padding-right: var(--dl-space-space-halfunit);
+      flex-direction: row;
+      padding-bottom: var(--dl-space-space-unit);
+      justify-content: center;
+    }
+
+    .pagina-inicial-button1 {
+      top: 0px;
+      left: 0px;
+      right: 0px;
+      position: absolute;
+      margin-top: var(--dl-space-space-unit);
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: var(--dl-space-space-halfunit);
+    }
+
+    .pagina-inicial-button2 {
+      left: 0px;
+      right: 0px;
+      bottom: 0px;
+      position: absolute;
+      margin-top: var(--dl-space-space-halfunit);
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: var(--dl-space-space-unit);
+    }
+
+    .pagina-inicial-ofertadodia {
+      height: 467px;
+    }
+
+    .pagina-inicial-containerfrango {
+      width: 10%;
+      height: 10%;
+      padding-left: var(--dl-space-space-unit);
+      padding-right: var(--dl-space-space-unit);
+    }
+
   }
-  .pagina-inicial-botoes {
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-}
-@media(max-width: 479px) {
-  .pagina-inicial-header {
-    width: 100%;
-    height: 233px;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .pagina-inicial-icone {
-    width: 224px;
-    height: 158px;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .pagina-inicial-titulo {
-    top: 0px;
-    left: 1px;
-    height: auto;
-    position: absolute;
-  }
-  .pagina-inicial-text10 {
-    font-size: 40;
-    align-self: flex-start;
-    text-align: center;
-  }
-  .pagina-inicial-botoes {
-    left: 0px;
-    right: 0px;
-    width: 100%;
-    bottom: 0px;
-    height: 167px;
-    margin: auto;
-    position: absolute;
-    flex-wrap: wrap;
-    align-items: center;
-    padding-top: var(--dl-space-space-unit);
-    padding-left: var(--dl-space-space-halfunit);
-    padding-right: var(--dl-space-space-halfunit);
-    flex-direction: row;
-    padding-bottom: var(--dl-space-space-unit);
-    justify-content: center;
-  }
-  .pagina-inicial-button1 {
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    position: absolute;
-    margin-top: var(--dl-space-space-unit);
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: var(--dl-space-space-halfunit);
-  }
-  .pagina-inicial-button2 {
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    position: absolute;
-    margin-top: var(--dl-space-space-halfunit);
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .pagina-inicial-ofertadodia {
-    height: 467px;
-  }
-  .pagina-inicial-containerfrango {
-    width: 10%;
-    heingt: 10%;
-    padding-left: var(--dl-space-space-unit);
-    padding-right: var(--dl-space-space-unit);
-  }
-  .pagina-inicial-cards {
-    height: var(--dl-size-size-maxwidth);
-    position: relative;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-}
