--- a/paginasignup.css
+++ b/paginasignup.css
@@ -89,6 +89,7 @@
   border-color: var(--dl-color-theme-neutral-dark);
   border-style: hidden;
   border-width: 1px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .headerroot-class-name {
   top: 0px;
@@ -337,6 +338,7 @@
   text-align: center;
   padding-top: var(--dl-space-space-unit);
   padding-bottom: var(--dl-space-space-unit);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .paginasignup-form {
   top: var(--dl-space-space-fourunits);
